rust/node-structuring/tests/snapshots/examples__paragraphs-to-keywords-key-words.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This document uses the \"Key words\" variant."
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This content should remain while the Key words paragraph should be extracted as document keywords."
          }
        }
      ]
    }
  ],
  "keywords": [
    "research methodology",
    "experimental design",
    "hypothesis testing"
  ]
}
