rust/node-structuring/tests/snapshots/examples__remove-empty-headings-numbered.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Heading",
      "level": 1,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Valid Heading"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This empty heading above should be removed because it has no content after the numbering prefix."
          }
        }
      ]
    },
    {
      "type": "Heading",
      "level": 1,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Another Valid Heading"
          }
        }
      ]
    }
  ]
}
