rust/node-structuring/tests/snapshots/examples__remove-empty-lists-simple.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This document has empty lists that should be removed."
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "The empty unordered and ordered list items above should be removed along with their parent lists."
          }
        }
      ]
    }
  ]
}
